plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.6'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-devtools'

    //jwt 토큰 관련
    compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'

    //시큐리티 관련
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'
    implementation group: 'org.json', name: 'json', version: '20220924'

    compileOnly('javax.servlet:javax.servlet-api:4.0.1')
//
//    //스웨거 관련
//    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
//

    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    testImplementation 'org.springframework.security:spring-security-test'

    implementation group: 'org.json', name: 'json', version: '20220924'

//    compileOnly('javax.servlet:javax.servlet-api:4.0.1')

    //스웨거 관련
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'

//    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.4'

    implementation 'net.nurigo:sdk:4.2.4'
    implementation 'net.nurigo:javaSDK:2.2'
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'



    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    //채팅관련
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.webjars:sockjs-client:1.1.2'
    implementation 'org.webjars:stomp-websocket:2.3.3-1'
    implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'

    //DB
//    implementation "org.mariadb.jdbc:mariadb-java-client:2.1.2"
}

tasks.named('test') {
    useJUnitPlatform()
}
